# Qt-Android-minimal-app

./: CMakeLists.txt  README.md  androidinterface.cpp  androidinterface.h  jnimessenger.cpp  jnimessenger.h  main.cpp  main.qml
android/: AndroidManifest.xml  build.gradle
android/src/com/example/: BroadcastMiddleware.java  DemoService.java  LocationService.java  PermissionsActivity.java
